--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "next": "16.0.10",
+    "openai": "^6.14.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-element-to-jsx-string": "^17.0.1",
     "simplex-noise": "^4.0.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "youtube-captions-scraper": "^2.0.3",
+    "youtube-transcript": "^1.2.1",
+    "youtube-transcript-api": "^3.0.6",
+    "youtube-transcript-plus": "^1.1.1",
+    "youtubei.js": "^16.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
